--- a/index.html
+++ b/index.html
@@ -1,120 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ReparaTech</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-        font-family: "Roboto", sans-serif;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JoseTecnology</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Roboto', sans-serif;
+    }
 
-      body {
-        background-color: #ffffff;
-        color: #333;
-      }
+    body {
+      background-color: #ffffff;
+      color: #333;
+    }
 
-      header {
-        background-color: #1e3a8a;
-        color: white;
-        padding: 1rem 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
+    header {
+      background-color: #1e3a8a;
+      color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-      header h1 {
-        font-size: 1.5rem;
-      }
+    header h1 {
+      font-size: 1.5rem;
+    }
 
-      nav a {
-        color: white;
-        margin-left: 1.5rem;
-        text-decoration: none;
-        font-weight: 500;
-      }
+    nav a {
+      color: white;
+      margin-left: 1.5rem;
+      text-decoration: none;
+      font-weight: 500;
+    }
 
-      .hero {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        padding: 4rem 2rem;
-        background-color: #f3f4f6;
-      }
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 4rem 2rem;
+      background-color: #f3f4f6;
+    }
 
-      .hero h2 {
-        font-size: 2rem;
-        color: #1e3a8a;
-        margin-bottom: 1rem;
-      }
+    .hero h2 {
+      font-size: 2rem;
+      color: #1e3a8a;
+      margin-bottom: 1rem;
+    }
 
-      .hero p {
-        font-size: 1.1rem;
-        max-width: 600px;
-        margin-bottom: 2rem;
-      }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
 
-      .hero img {
-        max-width: 100%;
-        height: auto;
-        margin-bottom: 2rem;
-      }
+    .hero img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 2rem;
+    }
 
-      .cta-button {
-        background-color: #2563eb;
-        color: white;
-        padding: 0.75rem 1.5rem;
-        font-size: 1rem;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
+    .cta-button, .whatsapp-button {
+      background-color: #2563eb;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+      margin: 0.5rem;
+      text-decoration: none;
+      display: inline-block;
+    }
 
-      .cta-button:hover {
-        background-color: #1d4ed8;
-      }
+    .cta-button:hover, .whatsapp-button:hover {
+      background-color: #1d4ed8;
+    }
 
-      footer {
-        text-align: center;
-        padding: 1rem;
-        background-color: #1e3a8a;
-        color: white;
-        font-size: 0.9rem;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>JoseTecnology</h1>
-      <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Servicios</a>
-        <a href="#">Contacto</a>
-      </nav>
-    </header>
+    .whatsapp-button {
+      background-color: #25D366;
+    }
 
-    <section class="hero">
-      <h2>Reparación confiable de celulares</h2>
-      <p>
-        Somos especialistas en reparación de pantallas, baterías, puertos de
-        carga y más. Confía tu equipo a manos expertas.
-      </p>
-      <img
-        src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg"
-        alt="Técnico reparando celular"
-      />
-      <button class="cta-button">Solicitar cotización</button>
-    </section>
+    .whatsapp-button:hover {
+      background-color: #1ebe5d;
+    }
 
-    <footer>&copy; 2025 JoseTecnology - Todos los derechos reservados</footer>
-  </body>
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #1e3a8a;
+      color: white;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>JoseTecnology</h1>
+    <nav>
+      <a href="#">Inicio</a>
+      <a href="#">Servicios</a>
+      <a href="#">Contacto</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Reparación confiable de celulares</h2>
+    <p>Somos especialistas en reparación de pantallas, baterías, puertos de carga y más. Confía tu equipo a manos expertas.</p>
+    <img src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg" alt="Técnico reparando celular">
+    <button class="cta-button">Solicitar cotización</button>
+    <a href="https://wa.me/573138543560" class="whatsapp-button" target="_blank">Habla por WhatsApp</a>
+  </section>
+
+  <footer>
+    &copy; 2025 JoseTecnology - Todos los derechos reservados
+  </footer>
+</body>
 </html>
