--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
         margin-bottom: 2rem;
       }
 
-      .cta-button,
       .whatsapp-button {
-        background-color: #2563eb;
+        background-color: #25d366;
         color: white;
         padding: 0.75rem 1.5rem;
         font-size: 1rem;
@@ -78,18 +77,8 @@
         border-radius: 8px;
         cursor: pointer;
         transition: background-color 0.3s ease;
-        margin: 0.5rem;
         text-decoration: none;
         display: inline-block;
-      }
-
-      .cta-button:hover,
-      .whatsapp-button:hover {
-        background-color: #1d4ed8;
-      }
-
-      .whatsapp-button {
-        background-color: #25d366;
       }
 
       .whatsapp-button:hover {
@@ -107,7 +96,7 @@
   </head>
   <body>
     <header>
-      <h1>JoseTecnology</h1>
+      <h1>ReparaTech</h1>
       <nav>
         <a href="#">Inicio</a>
         <a href="#">Servicios</a>
@@ -116,6 +105,7 @@
     </header>
 
     <section class="hero">
+      <h2>Reparación confiable de celulares</h2>
       <p>
         Somos especialistas en reparación de pantallas, baterías, puertos de
         carga y más. Confía tu equipo a manos expertas.
@@ -124,12 +114,11 @@
         src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg"
         alt="Técnico reparando celular"
       />
-      <button class="cta-button">Solicitar cotización</button>
       <a
         href="https://wa.me/573138543560"
         class="whatsapp-button"
         target="_blank"
-        >Cotizar al WhatsApp</a
+        >Habla por WhatsApp</a
       >
     </section>
 
