--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         href="https://wa.me/573138543560"
         class="whatsapp-button"
         target="_blank"
-        >Habla por WhatsApp</a
+        >Cotizar por WhatsApp</a
       >
     </section>
 
