--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   </head>
   <body>
     <header>
-      <h1>ReparaTech</h1>
+      <h1>JoseTecnology</h1>
       <nav>
         <a href="#">Inicio</a>
         <a href="#">Servicios</a>
