Replace 'Servicios' link with dropdown menu

--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
       <h1>JoseTecnology</h1>
       <nav>
         <a href="#">Inicio</a>
-        <a href="#">Servicios</a>
+        <button class="dropbtn">Servicios ▾</button>
+    <div class="dropdown-content">
+      <a href="servicios.html">Reparación de celulares</a>
+      <a href="software.html">Software</a>
+      <a href="diagnostico.html">Diagnóstico</a>
+    </div>
         <a href="#">Contacto</a>
       </nav>
     </header>
