Refactor navigation menu in index.html

--- a/index.html
+++ b/index.html
@@ -97,16 +97,21 @@
   <body>
     <header>
       <h1>JoseTecnology</h1>
-      <nav>
-        <a href="#">Inicio</a>
-        <button class="dropbtn">Servicios ▾</button>
+     <nav class="menu">
+  <a href="index.html">Inicio</a>
+
+  <div class="dropdown">
+    <button class="dropbtn">Servicios ▾</button>
     <div class="dropdown-content">
       <a href="servicios.html">Reparación de celulares</a>
       <a href="software.html">Software</a>
       <a href="diagnostico.html">Diagnóstico</a>
     </div>
-        <a href="#">Contacto</a>
-      </nav>
+  </div>
+
+  <a href="contacto.html">Contacto</a>
+</nav>
+
     </header>
 
     <section class="hero">
