Update 'Servicios' button in navigation menu
Removed dropdown arrow from 'Servicios' button.

--- a/index.html
+++ b/index.html
@@ -97,11 +97,10 @@
   <body>
     <header>
       <h1>JoseTecnology</h1>
-     <nav class="menu">
+  <nav class="menu">
   <a href="index.html">Inicio</a>
-
   <div class="dropdown">
-    <button class="dropbtn">Servicios ▾</button>
+    <button class="dropbtn">Servicios</button>
     <div class="dropdown-content">
       <a href="servicios.html">Reparación de celulares</a>
       <a href="software.html">Software</a>
