Update dropdown menu items in index.html

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
   <nav class="menu">
   <a href="index.html">Inicio</a>
   <div class="dropdown">
-    <button class="dropbtn">Servicios</button>
     <div class="dropdown-content">
-      <a href="servicios.html">Reparación de celulares</a>
-      <a href="software.html">Software</a>
-      <a href="diagnostico.html">Diagnóstico</a>
+      <a href="servicios.html">Inicio</a>
+      <a href="servicios.html">Cuentas stream</a>
+      <a href="software.html">Servicio Tecnico</a>
+      <a href="https://wa.me/573222190187">Contactanos</a>
     </div>
   </div>
 
