Refactor index.html structure and update content

--- a/index.html
+++ b/index.html
@@ -1,59 +1,40 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JoseTecnology | Servicio Técnico</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JoseTecnology</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>JoseTecnology</h1>
+      <nav class="menu">
+        <a href="index.html">Inicio</a>
+        <a href="servicios.html">Cuentas stream</a>
+        <a href="software.html">Servicio Tecnico</a>
+        <a href="https://wa.me/573222190187">Contactanos</a>
+      </nav>
+    </header>
 
-  <!-- CSS en la raíz o en css/styles.css -->
-  <link rel="stylesheet" href="styles.css">
-</head>
+    <section class="hero">
+      <h2>Reparación confiable de celulares</h2>
+      <p>
+        Somos especialistas en reparación de pantallas, baterías, puertos de
+        carga y más. Confía tu equipo a manos expertas.
+      </p>
+      <img
+        src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg"
+        alt="Técnico reparando celular"
+      />
+      <a
+        href="https://wa.me/573222190187"
+        class="whatsapp-button"
+        target="_blank"
+        >Cotizar por WhatsApp</a
+      >
+    </section>
 
-<body>
-
-<header>
-  <h1>JoseTecnology</h1>
-
-  <nav class="menu">
-    <a href="index.html">Inicio</a>
-
-    <div class="dropdown">
-      <button class="dropbtn">Servicios ▾</button>
-      <div class="dropdown-content">
-        <a href="servicios.html">Servicio Técnico</a>
-        <a href="software.html">Software</a>
-        <a href="stream.html">Cuentas Stream</a>
-      </div>
-    </div>
-
-    <a href="https://wa.me/573222190187" target="_blank">Contacto</a>
-  </nav>
-</header>
-
-<section class="hero">
-  <h2>Reparación confiable de celulares</h2>
-  <p>
-    Somos especialistas en reparación de pantallas, baterías, puertos de carga
-    y más. Confía tu equipo a manos expertas.
-  </p>
-
-  <img
-    src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg"
-    alt="Técnico reparando celular"
-  />
-
-  <a
-    href="https://wa.me/573222190187"
-    class="whatsapp-button"
-    target="_blank"
-  >
-    Cotizar por WhatsApp
-  </a>
-</section>
-
-<footer>
-  &copy; 2025 JoseTecnology - Todos los derechos reservados
-</footer>
-
-</body>
+    <footer>&copy; 2025 JoseTecnology - Todos los derechos reservados</footer>
+  </body>
 </html>
