--- a/servicios.html
+++ b/servicios.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Servicios | JoseTecnology</title>
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 
