--- a/servicios.html
+++ b/servicios.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Servicios | JoseTecnology</title>
-  <link rel="stylesheet" href="css/styles.css" />
-</head>
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JoseTecnology</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 <body>
-
+<header>
+      <h1>JoseTecnology</h1>
+      <nav class="menu">
+        <a href="index.html">Inicio</a>
+        <a href="servicios.html">Cuentas stream</a>
+        <a href="software.html">Servicio Tecnico</a>
+        <a href="https://wa.me/573222190187">Contactanos</a>
+      </nav>
+    </header>
 <header>
   <h1>JoseTecnology</h1>
   <!-- COPIAS EL MISMO NAV AQUÍ -->
