--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+     <h1>JoseTecnology</h1>
     <header>
       <nav class="menu">
         <a href="index.html">Inicio</a>
