--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JoseTecnology</title>
+      <title>JoseTecnology | Servicio Técnico</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 <body>
