--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+       <h1>JoseTecnology</h1>
       <nav class="menu">
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Cuentas stream</a>
