Add logo and header to servicios.html

--- a/servicios.html
+++ b/servicios.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 <body>
-<header>
-  <h1>JoseTecnology</h1>
+<header> 
+ <div class="logo-container">
+            <!-- Logo - reemplaza "logo.png" con tu imagen real -->
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgKXGh2V3s5aZ6qzzl_V7rohxuRFsN2W9fPaQrVaBiwVU4PbIpDNnuqogO7upXrTV9Dp_AAyj_jYO0b5cPbO5kmG8ffG7NMDtjYhwLm6cquNmjVyMhGQAzLwj8kO2bANRKXOW4R31hZXBfHbaLfA0-JWbTJvWWuSXNRV4gAhRVdrtPRPdrGsLzFmNTEq5Y/s960/FB_IMG_1752676650653.jpg" alt="Logo JoseTecnology" class="logo">
+            <h1>JoseTecnology</h1>
+        </div>
       <nav class="menu">
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Cuentas stream</a>
