Update installation note in product card

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div>
               <div style="font-size:13px; font-weight:bold; color:#333; text-transform:uppercase;">${p.nombre}</div>
               <div style="color:#2ecc71; font-weight:bold; font-size:1.1em;">${precioFormateado}</div>
-              <small style="color:#888; font-size:10px;">Algunas incluye instalación</small>
+              <small style="color:#888; font-size:10px;">Coordinar envío o instalación</small>
             </div>
             <a href="https://wa.me/573222190187?text=${textoWhatsApp}" 
                target="_blank" 
