--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <div class="logo-container">
         <img
-          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgKXGh2V3s5aZ6qzzl_V7rohxuRFsN2W9fPaQrVaBiwVU4PbIpDNnuqogO7upXrTV9Dp_AAyj_jYO0b5cPbO5kmG8ffG7NMDtjYhwLm6cquNmjVyMhGQAzLwj8kO2bANRKXOW4R31hZXBfHbaLfA0-JWbTJvWWuSXNRV4gAhRVdrtPRPdrGsLzFmNTEq5Y/s960/FB_IMG_1752676650653.jpg"
+          src="rs/FB_IMG_1752676650653.jpg"
           alt="Logo JoseTecnology"
           class="logo"
         />
