--- a/servicios.html
+++ b/servicios.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
- <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>JoseTecnology | Servicio Técnico</title>
+    <title>JoseTecnology | Servicio Técnico</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-<body>
-<header> 
- <div class="logo-container">
-            <!-- Logo - reemplaza "logo.png" con tu imagen real -->
-            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgKXGh2V3s5aZ6qzzl_V7rohxuRFsN2W9fPaQrVaBiwVU4PbIpDNnuqogO7upXrTV9Dp_AAyj_jYO0b5cPbO5kmG8ffG7NMDtjYhwLm6cquNmjVyMhGQAzLwj8kO2bANRKXOW4R31hZXBfHbaLfA0-JWbTJvWWuSXNRV4gAhRVdrtPRPdrGsLzFmNTEq5Y/s960/FB_IMG_1752676650653.jpg" alt="Logo JoseTecnology" class="logo">
-            <h1>JoseTecnology</h1>
-        </div>
+  <body>
+    <header>
+      <div class="logo-container">
+        <img
+          src="rs/FB_IMG_1752676650653.jpg"
+          alt="Logo JoseTecnology"
+          class="logo"
+        />
+        <h1>JoseTecnology</h1>
+      </div>
       <nav class="menu">
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Cuentas stream</a>
         <a href="software.html">Servicio Tecnico</a>
-        <a href="https://wa.me/573222190187">Contactanos</a>
+        <a href="https://wa.me/573222190187" target="_blank">Contactanos</a>
       </nav>
     </header>
-
-<h2>Servicios Técnicos</h2>
-<p>Reparación profesional de celulares...</p>
-
-</body>
+  </body>
 </html>
