--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Cuentas stream</a>
         <a href="software.html">Servicio Tecnico</a>
-        <a href="https://wa.me/573222190187" target="_blank">Contactanos</a>
+        <a href="//wa.me/573222190187" target="_blank">Contactanos</a>
       </nav>
     </header>
 
@@ -148,13 +148,10 @@
         carga y más. Confía tu equipo a manos expertas.
       </p>
       <img
-        src="https://i.pinimg.com/736x/cb/64/ed/cb64ed071a6dd4e65e7c440448909090.jpg"
+        src="rs/cb64ed071a6dd4e65e7c440448909090.jpg"
         alt="Técnico reparando celular"
       />
-      <a
-        href="https://wa.me/573222190187"
-        class="whatsapp-button"
-        target="_blank"
+      <a href="//wa.me/573222190187" class="whatsapp-button" target="_blank"
         >Cotizar por WhatsApp</a
       >
     </section>
