Update contact link to use protocol-relative URL

--- a/servicios.html
+++ b/servicios.html
@@ -20,7 +20,7 @@
         <a href="index.html">Inicio</a>
         <a href="servicios.html">Cuentas stream</a>
         <a href="software.html">Servicio Tecnico</a>
-        <a href="https://wa.me/573222190187" target="_blank">Contactanos</a>
+        <a href="//wa.me/573222190187" target="_blank">Contactanos</a>
       </nav>
     </header>
   </body>
