Revise title and enhance SEO meta tags in index.html
Updated the title and added meta tags for SEO.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JoseTecnology - Buscador de Repuestos</title>
+    <title>JoseTecnology | Servicio Técnico y Pantallas en Mosquera</title>
+    <meta name="description" content="Expertos en reparación de celulares en Mosquera. Cambio de pantallas originales, baterías y servicio técnico garantizado. ¡Cotiza tu pantalla ahora!">
+    <meta name="description" content="samsung pantalla funza, huawei pantalla funza, xiaomi repuestos funza, motorola reparación funza, iphone pantalla original funza, cambio de pantalla funza, reparación de celulares funza, repuestos de celulares funza, técnicos especializados funza, cotización de pantallas funza">
+    <meta name="keywords" content="reparación de celulares, cambio de pantalla, servicio técnico Mosquera, repuestos de celulares, JoseTecnology ,pantallas originales, baterías para celulares, reparación rápida, técnicos especializados, cotización de pantallas Mosquera ,cotizacion de pantalla funza, reparación de móviles, servicio de reparación de teléfonos, repuestos originales, técnicos certificados, garantía en reparaciones, servicio de calidad, Mosquera tecnología">
+
+    <meta property="og:title" content="JoseTecnology - Servicio Técnico Profesional">
     <link rel="stylesheet" href="css/styles.css" />
     <style>
       /* Estilos básicos para el contenedor de resultados si no están en tu CSS */
