Integrate Google Analytics tracking
Added Google Analytics tracking script to index.html

--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
           class="logo"
         />
         <h1>JoseTecnology</h1>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7PEDVFC82R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7PEDVFC82R');
+</script>
       </div>
       <nav class="menu">
         <a href="index.html">Inicio</a>
