--- a/servicios.html
+++ b/servicios.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JoseTecnology | Servicio Técnico</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7PEDVFC82R"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-14C7D12C3N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7PEDVFC82R');
+  gtag('config', 'G-14C7D12C3N');
 </script>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
