Update Google Tag Manager ID in index.html

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         />
         <h1>JoseTecnology</h1>
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-7PEDVFC82R"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-14C7D12C3N"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-7PEDVFC82R');
+  gtag('config', 'G-14C7D12C3N');
 </script>
       </div>
       <nav class="menu">
